--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "better-sqlite3": "^9.0.0",
     "bull": "^4.11.4",
+    "dotenv": "^16.3.1",
     "node-telegram-bot-api": "^0.64.0",
     "pg": "^8.11.3",
     "socks5-https-client": "^1.2.1",
